--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 130,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 131,
       "metadata": {},
       "outputs": [
         {
@@ -131,7 +131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 132,
       "metadata": {},
       "outputs": [
         {
@@ -253,7 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 133,
       "metadata": {},
       "outputs": [
         {
@@ -305,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 134,
       "metadata": {},
       "outputs": [
         {
@@ -473,7 +473,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 135,
       "metadata": {},
       "outputs": [
         {
@@ -576,7 +576,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 136,
       "metadata": {},
       "outputs": [
         {
@@ -696,7 +696,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 137,
       "metadata": {},
       "outputs": [
         {
@@ -979,7 +979,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 138,
       "metadata": {},
       "outputs": [
         {
@@ -1149,7 +1149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 139,
       "metadata": {},
       "outputs": [
         {
@@ -1318,7 +1318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 140,
       "metadata": {},
       "outputs": [
         {
@@ -1464,7 +1464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 141,
       "metadata": {},
       "outputs": [
         {
@@ -1593,7 +1593,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 142,
       "metadata": {},
       "outputs": [
         {
@@ -1766,7 +1766,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 143,
       "metadata": {},
       "outputs": [
         {
@@ -1988,7 +1988,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 144,
       "metadata": {},
       "outputs": [
         {
@@ -2204,7 +2204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 145,
       "metadata": {},
       "outputs": [
         {
@@ -2410,7 +2410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 146,
       "metadata": {},
       "outputs": [
         {
@@ -2438,7 +2438,7 @@
             "9.0     852\n",
             "10.0    824\n",
             "Name: count, dtype: int64\n",
-            "  → Похоже на порядковый признак (10 уникальных значений)\n",
+            "  -> Похоже на порядковый признак (10 уникальных значений)\n",
             "\n",
             "  Связь с таргетом:\n",
             "Heart Attack Risk (Binary)       0.0       1.0\n",
@@ -2488,7 +2488,7 @@
             "6.0    1055\n",
             "7.0    1063\n",
             "Name: count, dtype: int64\n",
-            "  → Похоже на порядковый признак (8 уникальных значений)\n",
+            "  -> Похоже на порядковый признак (8 уникальных значений)\n",
             "\n",
             "  Связь с таргетом:\n",
             "Heart Attack Risk (Binary)            0.0       1.0\n",
@@ -2539,7 +2539,7 @@
             "0.999419    1\n",
             "1.000000    1\n",
             "Name: count, Length: 7933, dtype: int64\n",
-            "  → Похоже на числовой признак (7933 уникальных значений)\n",
+            "  -> Похоже на числовой признак (7933 уникальных значений)\n",
             "\n",
             "  Связь с таргетом:\n",
             "Heart Attack Risk (Binary)  0.0  1.0\n",
@@ -2680,7 +2680,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": 147,
       "metadata": {},
       "outputs": [
         {
@@ -2695,17 +2695,17 @@
             "   Класс 1: 3013 (34.7%)\n",
             "   Соотношение классов: 0.531\n",
             "   [OK] Классы достаточно сбалансированы\n",
-            "   → Можно использовать Accuracy, но F1-score предпочтительнее\n",
+            "   -> Можно использовать Accuracy, но F1-score предпочтительнее\n",
             "\n",
             "2. Анализ важности метрик для медицинской задачи:\n",
             "   False Positive (FP): Ложная тревога - здоровому человеку предсказали риск\n",
-            "     → Последствия: ненужное беспокойство, дополнительные обследования\n",
+            "     -> Последствия: ненужное беспокойство, дополнительные обследования\n",
             "   False Negative (FN): Пропуск риска - больному предсказали отсутствие риска\n",
-            "     → Последствия: КРИТИЧНО! Пропущенный сердечный приступ может привести к смерти\n",
+            "     -> Последствия: КРИТИЧНО! Пропущенный сердечный приступ может привести к смерти\n",
             "\n",
-            "   → Вывод: False Negative более критичны, чем False Positive\n",
-            "   → Важно максимизировать Recall (минимизировать FN)\n",
-            "   → Но также важно Precision (минимизировать FP)\n",
+            "   -> Вывод: False Negative более критичны, чем False Positive\n",
+            "   -> Важно максимизировать Recall (минимизировать FN)\n",
+            "   -> Но также важно Precision (минимизировать FP)\n",
             "\n",
             "3. Рекомендуемые метрики:\n",
             "   Основная метрика: F1-score\n",
@@ -2716,14 +2716,14 @@
             "\n",
             "   Дополнительные метрики:\n",
             "   - ROC-AUC: Способность модели различать классы\n",
-            "     → Хорошо работает при дисбалансе классов\n",
-            "     → Показывает качество ранжирования\n",
+            "     -> Хорошо работает при дисбалансе классов\n",
+            "     -> Показывает качество ранжирования\n",
             "   - Precision: Минимизация ложных тревог\n",
-            "     → Важно для избежания ненужных обследований\n",
+            "     -> Важно для избежания ненужных обследований\n",
             "   - Recall: Минимизация пропущенных случаев\n",
-            "     → КРИТИЧНО для медицинской задачи!\n",
+            "     -> КРИТИЧНО для медицинской задачи!\n",
             "   - Accuracy: Общая точность\n",
-            "     → Может быть обманчивой при дисбалансе классов\n",
+            "     -> Может быть обманчивой при дисбалансе классов\n",
             "\n",
             "4. Обоснование выбора:\n",
             "   [OK] F1-score выбран как основная метрика, потому что:\n",
@@ -2913,7 +2913,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 148,
       "metadata": {},
       "outputs": [
         {
@@ -2972,7 +2972,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": 149,
       "metadata": {},
       "outputs": [
         {
@@ -3025,7 +3025,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": 150,
       "metadata": {},
       "outputs": [
         {
@@ -3085,7 +3085,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 151,
       "metadata": {},
       "outputs": [
         {
@@ -3125,7 +3125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 152,
       "metadata": {},
       "outputs": [
         {
@@ -3176,7 +3176,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 153,
       "metadata": {},
       "outputs": [
         {
@@ -3259,7 +3259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 154,
       "metadata": {},
       "outputs": [
         {
@@ -3314,7 +3314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 155,
       "metadata": {},
       "outputs": [
         {
@@ -3388,7 +3388,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 156,
       "metadata": {},
       "outputs": [
         {
@@ -3404,21 +3404,21 @@
             "    ROC-AUC:   0.5240\n",
             "    Precision: 0.3590\n",
             "    Recall:    0.5174\n",
-            "    Time:      0.61s\n",
+            "    Time:      0.64s\n",
             "\n",
             ">>> Random Forest\n",
             "    F1-score:  0.3854 (+/- 0.0171)\n",
             "    ROC-AUC:   0.5696\n",
             "    Precision: 0.3868\n",
             "    Recall:    0.3843\n",
-            "    Time:      3.72s\n",
+            "    Time:      3.62s\n",
             "\n",
             ">>> CatBoost\n",
             "    F1-score:  0.0431 (+/- 0.0110)\n",
             "    ROC-AUC:   0.5638\n",
             "    Precision: 0.5115\n",
             "    Recall:    0.0226\n",
-            "    Time:      1.07s\n",
+            "    Time:      1.08s\n",
             "\n",
             "======================================================================\n",
             "Обучение завершено!\n",
@@ -3487,7 +3487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": 157,
       "metadata": {},
       "outputs": [
         {
@@ -3498,11 +3498,11 @@
             "СРАВНЕНИЕ МОДЕЛЕЙ (отсортировано по F1-score)\n",
             "======================================================================\n",
             "              Model       F1   F1_std  ROC-AUC  Precision   Recall  Time (s)\n",
-            "Logistic Regression 0.423728 0.012241 0.524028   0.358950 0.517409  0.607446\n",
-            "      Random Forest 0.385372 0.017056 0.569606   0.386760 0.384318  3.723631\n",
-            "           CatBoost 0.043054 0.011010 0.563782   0.511536 0.022569  1.068131\n",
+            "Logistic Regression 0.423728 0.012241 0.524028   0.358950 0.517409  0.644771\n",
+            "      Random Forest 0.385372 0.017056 0.569606   0.386760 0.384318  3.615938\n",
+            "           CatBoost 0.043054 0.011010 0.563782   0.511536 0.022569  1.075530\n",
             "\n",
-            "[BEST] ЛУЧШАЯ МОДЕЛЬ: Logistic Regression\n",
+            " ЛУЧШАЯ МОДЕЛЬ: Logistic Regression\n",
             "   F1-score: 0.4237\n",
             "   [!] Цель НЕ достигнута (F1 < 0.49), нужна оптимизация\n"
           ]
@@ -3533,7 +3533,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 118,
+      "execution_count": 158,
       "metadata": {},
       "outputs": [
         {
@@ -3593,7 +3593,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": 159,
       "metadata": {},
       "outputs": [
         {
@@ -3650,7 +3650,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
+      "execution_count": 160,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -3688,7 +3688,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": 161,
       "metadata": {},
       "outputs": [
         {
@@ -3802,7 +3802,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": 162,
       "metadata": {},
       "outputs": [
         {
@@ -3817,7 +3817,7 @@
             "\n",
             "CatBoost (optimized): F1 = 0.2697\n",
             "\n",
-            "[BEST] ФИНАЛЬНАЯ МОДЕЛЬ: Random Forest (optimized)\n",
+            " ФИНАЛЬНАЯ МОДЕЛЬ: Random Forest (optimized)\n",
             "   F1-score: 0.4803\n",
             "   [!] F1 < 0.49, но используем лучший результат\n"
           ]
@@ -3868,7 +3868,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": 163,
       "metadata": {},
       "outputs": [
         {
@@ -3908,7 +3908,60 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": 164,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[OK] Модель сохранена: ../models/random_forest_model.joblib\n",
+            "[OK] Признаки сохранены: ../models/feature_names.joblib\n",
+            "[OK] Значения заполнения сохранены: ../models/fill_values.joblib\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Сохранение модели для FastAPI\n",
+        "import joblib\n",
+        "from pathlib import Path\n",
+        "\n",
+        "# Создаём папку models если её нет\n",
+        "models_dir = Path('../models')\n",
+        "models_dir.mkdir(exist_ok=True)\n",
+        "\n",
+        "# Сохраняем модель\n",
+        "model_path = models_dir / 'random_forest_model.joblib'\n",
+        "joblib.dump(final_model, model_path)\n",
+        "print(f'[OK] Модель сохранена: {model_path}')\n",
+        "\n",
+        "# Сохраняем список признаков для API\n",
+        "feature_names = X_train.columns.tolist()\n",
+        "features_path = models_dir / 'feature_names.joblib'\n",
+        "joblib.dump(feature_names, features_path)\n",
+        "print(f'[OK] Признаки сохранены: {features_path}')\n",
+        "\n",
+        "# Сохраняем моды для заполнения пропусков (из train данных до предобработки)\n",
+        "# Эти значения нужны для API\n",
+        "fill_values = {\n",
+        "    'Diabetes': 1.0,\n",
+        "    'Family History': 0.0,\n",
+        "    'Smoking': 1.0,\n",
+        "    'Obesity': 0.0,\n",
+        "    'Alcohol Consumption': 1.0,\n",
+        "    'Previous Heart Problems': 1.0,\n",
+        "    'Medication Use': 0.0,\n",
+        "    'Stress Level': 5.0,\n",
+        "    'Physical Activity Days Per Week': 3.0\n",
+        "}\n",
+        "fill_path = models_dir / 'fill_values.joblib'\n",
+        "joblib.dump(fill_values, fill_path)\n",
+        "print(f'[OK] Значения заполнения сохранены: {fill_path}')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 165,
       "metadata": {},
       "outputs": [
         {
@@ -3966,7 +4019,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": 166,
       "metadata": {},
       "outputs": [
         {
@@ -4015,7 +4068,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": 167,
       "metadata": {},
       "outputs": [
         {
@@ -4082,7 +4135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 127,
+      "execution_count": 168,
       "metadata": {},
       "outputs": [
         {
@@ -4142,7 +4195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": 169,
       "metadata": {},
       "outputs": [
         {
@@ -4202,7 +4255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 129,
+      "execution_count": 170,
       "metadata": {},
       "outputs": [
         {
@@ -4376,10 +4429,10 @@
         "\n",
         "##  ВЫВОДЫ И РЕКОМЕНДАЦИИ\n",
         "\n",
-        "### Достигнутые цели:\n",
-        "- [OK] F1-score на кросс-валидации: **0.48** (близко к цели 0.49)\n",
-        "- [OK] F1-score на train: **0.57** (хороший результат)\n",
-        "- [OK] ROC-AUC: **0.71** (модель лучше случайной)\n",
+        "### Результаты:\n",
+        "- [!] F1-score на кросс-валидации: **0.48** — **цель (0.49) НЕ достигнута**\n",
+        "- [i] F1-score на train: **0.57** (переобучение, на CV ниже)\n",
+        "- [i] ROC-AUC: **0.71** (модель лучше случайной, но недостаточно)\n",
         "\n",
         "### Сложности задачи:\n",
         "- [!] Слабые корреляции признаков с таргетом\n",
@@ -4405,7 +4458,24 @@
         "\n",
         "---\n",
         "\n",
-        "**Проект выполнен!** 🎉"
+        "## Замечание по качеству модели\n",
+        "\n",
+        "**F1-score на кросс-валидации: 0.48** — это ниже целевого значения **0.49**.\n",
+        "\n",
+        "Модель показывает приемлемые результаты, но не достигает заявленной цели. Основные причины:\n",
+        "- Слабые корреляции признаков с целевой переменной (все < 0.1)\n",
+        "- Данные уже нормализованы, что ограничивает возможности предобработки\n",
+        "- Стандартный порог классификации (0.5) может быть не оптимальным\n",
+        "\n",
+        "**Продолжение работы:** см. `02_model_v2.ipynb`, где применяются дополнительные методы улучшения:\n",
+        "- Feature Engineering (создание новых признаков)\n",
+        "- Оптимизация порога классификации\n",
+        "- Тестирование XGBoost, LightGBM\n",
+        "- Стекинг моделей\n",
+        "\n",
+        "---\n",
+        "\n",
+        "**Первый этап завершён.** Модель не достигла целевого F1 > 0.49. Продолжение — в `02_model_v2.ipynb`."
       ]
     }
   ],
